<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:padding="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/men"
                    app:civ_border_color="#fff"
                    app:civ_border_width="2dp" />

            </RelativeLayout>

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/textNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:paddingTop="5dp"
                android:id="@+id/textCedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editDetalles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_detalles"
                    android:textColor="@color/white"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="5"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_email"/>

                        <TextView
                            android:id="@+id/textCorreo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_weight="2"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_phone"/>

                        <TextView
                            android:id="@+id/textPhone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_weight="2"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_nacimiento"/>

                        <TextView
                            android:id="@+id/textNacimiento"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_weight="2"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnFinalizar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/finalizar"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:background="@drawable/trading_button_effect"/>

                </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>